fix: :lipstick: fit heading linear gradient inside text
Before the linear gradient stretched across the page, now it is limited to the contents of the text

--- a/webshop_frontend/src/App.css
+++ b/webshop_frontend/src/App.css
@@ -12,7 +12,7 @@
   /* Text colour variables */
   --text-primary: #000;
   --text-secondary: #fff;
-  --text-gradient: -35deg, rgba(46, 116, 181, 1) 30%, rgba(95, 139, 5, 1) 70%;
+  --text-gradient: -35deg, rgba(46, 116, 181, 1) 0%, rgba(95, 139, 5, 1) 100%;
 
   /* Font family variables */
   --ff-primary: 'Open Sans', 'Arial', sans-serif;
@@ -37,7 +37,7 @@ body {
   margin: 0;
   font-family: var(--ff-primary);
   line-height: 2;
-  background: rgba(71, 51, 114, 0.15);
+  background: rgba(71, 51, 114, 0.10);
 }
 
 #root {
@@ -52,6 +52,7 @@ h3,
 h4,
 h5,
 h6 {
+  display: inline-block;
   margin: 0;
   font-family: var(--ff-subtitle);
 }
